salt: supervisor config for multiple workers mapped to specific celery queues

--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -18,7 +18,7 @@ send-keys -t ogre "git status\n"
 
 # 4) tail celeryd.log
 new-window -a -c /srv/ogreserver
-send-keys -t ogre "tail -f /var/log/ogreserver/celeryd.log\n"
+send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log\n"
 
 # 5) view S3 storage
 new-window -a -n s3 -c /srv/ogreserver
