--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -25,9 +25,9 @@ redirect_stderr=true
 {% set purge = "" %}
 {% endif %}
 
-[program:celeryd]
+[program:celeryd.general]
 directory=/srv/ogreserver
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -l warning {{ purge }} --pidfile /tmp/celeryd-ogreserver.pid --workdir=/srv/ogreserver
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l warning {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogreserver
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -35,9 +35,23 @@ autorestart=true
 {% if grains['env'] == 'prod' %}
 stdout_logfile=syslog
 {% else %}
-stdout_logfile=/var/log/ogreserver/celeryd.log
+stdout_logfile=/var/log/ogreserver/celeryd-general.log
+{% endif %}
+redirect_stderr=true
+
+[program:celeryd.conversion]
+directory=/srv/ogreserver
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l warning {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogreserver
+environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
+user={{ app_user }}
+autostart=true
+autorestart=true
+{% if grains['env'] == 'prod' %}
+stdout_logfile=syslog
+{% else %}
+stdout_logfile=/var/log/ogreserver/celeryd-conversion.log
 {% endif %}
 redirect_stderr=true
 
 [group:ogreserver]
-programs=gunicorn,celeryd
+programs=gunicorn,celeryd.general,celeryd.conversion
