salt: celerybeat config for supervisor

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -53,5 +53,21 @@ stdout_logfile=/var/log/ogreserver/celeryd-conversion.log
 {% endif %}
 redirect_stderr=true
 
+[program:celerybeat]
+directory=/srv/ogreserver
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery beat --app=ogreserver.runcelery:celery
+environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
+user={{ app_user }}
+autostart=true
+autorestart=true
+{% if grains['env'] == 'prod' %}
+stdout_logfile=syslog
+{% else %}
+stdout_logfile=/var/log/ogreserver/celerybeat.log
+{% endif %}
+redirect_stderr=true
+priority=998
+
+
 [group:ogreserver]
-programs=gunicorn,celeryd.general,celeryd.conversion
+programs=gunicorn,celeryd.general,celeryd.conversion,celerybeat
