salt: celery loglevel in dev

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -27,7 +27,7 @@ redirect_stderr=true
 
 [program:celeryd.general]
 directory=/srv/ogreserver
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l warning {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogreserver
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogreserver
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -41,7 +41,7 @@ redirect_stderr=true
 
 [program:celeryd.conversion]
 directory=/srv/ogreserver
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l warning {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogreserver
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogreserver
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
