salt: refactor pillar config; install into /srv/ogre for travis-ci

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -6,7 +6,7 @@
 ;################################################
 
 [program:gunicorn]
-directory=/srv/ogreserver
+directory=/srv/ogre
 command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/gunicorn ogreserver.runflask:app -c /etc/gunicorn.d/ogreserver.conf.py
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
@@ -26,8 +26,8 @@ redirect_stderr=true
 {% endif %}
 
 [program:celeryd.general]
-directory=/srv/ogreserver
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogreserver
+directory=/srv/ogre
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogre
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -40,8 +40,8 @@ stdout_logfile=/var/log/ogreserver/celeryd-general.log
 redirect_stderr=true
 
 [program:celeryd.conversion]
-directory=/srv/ogreserver
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogreserver
+directory=/srv/ogre
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogre
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -54,7 +54,7 @@ stdout_logfile=/var/log/ogreserver/celeryd-conversion.log
 redirect_stderr=true
 
 [program:celerybeat]
-directory=/srv/ogreserver
+directory=/srv/ogre
 command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery beat --app=ogreserver.runcelery:celery
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
