--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -1,5 +1,5 @@
 # start new session
-new-session -s ogre -c /srv/ogreserver
+new-session -s ogre -c /srv/ogre
 
 # 1) enter venv in default window
 send-keys -t ogre "workon ogreserver\n"
@@ -7,21 +7,21 @@ send-keys -t ogre "sudo supervisorctl status\n"
 send-keys -t ogre "tail -f /var/log/ogreserver/gunicorn.log\n"
 
 # 2) py.test
-new-window -a -c /srv/ogreserver
+new-window -a -c /srv/ogre
 send-keys -t ogre "workon ogreserver\n"
 send-keys -t ogre "py.test\n"
 
 # 3) code editing
-new-window -a -n edit -c /srv/ogreserver/ogreserver
+new-window -a -n edit -c /srv/ogre/ogreserver
 send-keys -t ogre "ls -l\n"
 send-keys -t ogre "git status\n"
 
 # 4) tail celeryd.log
-new-window -a -c /srv/ogreserver
+new-window -a -c /srv/ogre
 send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log\n"
 
 # 5) view S3 storage
-new-window -a -n s3 -c /srv/ogreserver
+new-window -a -n s3 -c /srv/ogre
 send-keys -t ogre "workon ogreserver\n"
 send-keys -t ogre "aws s3 ls s3://ogre-dev-au\n"
 
