server: better subprocess handling in convert; start celeryd with PATH configured

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -42,7 +42,7 @@ redirect_stderr=true
 [program:celeryd.conversion]
 directory=/srv/ogre
 command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogre
-environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
+environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin:/usr/local/bin:/usr/local/sbin:/usr/local/share/python:/usr/local/bin:/usr/bin:/bin"
 user={{ app_user }}
 autostart=true
 autorestart=true
