salt: tmux: show gunicorn & celeryd logs on init

--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -4,7 +4,6 @@ new-session -s ogre -c /srv/ogre
 # 1) enter venv in default window
 send-keys -t ogre "workon ogreserver\n"
 send-keys -t ogre "sudo supervisorctl status\n"
-send-keys -t ogre "tail -f /var/log/ogreserver/gunicorn.log\n"
 
 # 2) py.test
 new-window -a -c /srv/ogre
@@ -16,14 +15,13 @@ new-window -a -n edit -c /srv/ogre/ogreserver
 send-keys -t ogre "ls -l\n"
 send-keys -t ogre "git status\n"
 
-# 4) tail celeryd.log
+# 4) tail gunicorn.log
+new-window -a -c /srv/ogre
+send-keys -t ogre "tail -f /var/log/ogreserver/gunicorn.log\n"
+
+# 5) tail celeryd logs
 new-window -a -c /srv/ogre
 send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log\n"
-
-# 5) view S3 storage
-new-window -a -n s3 -c /srv/ogre
-send-keys -t ogre "workon ogreserver\n"
-send-keys -t ogre "aws s3 ls s3://ogre-dev-au\n"
 
 # display the py.test output
 select-window -t :2
