--- a/ogreserver/config/requirements.txt
+++ b/ogreserver/config/requirements.txt
@@ -1,6 +1,6 @@
 Flask==0.10.1
 Flask-Script==0.6.7
-Flask-Login==0.2.11
+Flask-Security==1.7.4
 SQLAlchemy==0.9.7
 Flask-Uploads==0.1.3
 Flask-WTF==0.10.0
