packer: vagrant config for testing prod boxes; packer deployment README

--- a/ogreserver/config/packer/salt-minion-vagrant.conf
+++ b/ogreserver/config/packer/salt-minion-vagrant.conf
@@ -1,11 +1,9 @@
-# salt-minion config file used for Packer builds
-# with salt-masterless provisioner
+# salt-minion config file used for testing prod
+# builds in Vagrant locally
 
 file_client: local
 
 id: ogre
-
-state_output: terse
 
 grains:
   env: prod
@@ -13,12 +11,12 @@ grains:
 
 file_roots:
   base:
-    - /srv/salt
+    - /srv/salt/salt
     - /srv/salt/salt-formulae
 
 pillar_roots:
   base:
-    - /srv/pillar
+    - /srv/salt/pillar
 
 mysql.user: root
 mysql.pass: eggs
