--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 install:
-  - pip install -r ogreserver/config/requirements.txt --pre
-  - pip install -r requirements_test.txt
+  - pip install -q -r ogreserver/config/requirements.txt --pre
+  - pip install -q -r requirements_test.txt
   - cd ogreclient && python setup.py install && cd ..
 python:
   - '2.7'
