--- a/ogreserver/config/Vagrantfile
+++ b/ogreserver/config/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
   end
 
   # salt config directory & shared dir in /tmp
-  config.vm.synced_folder "..", "/srv/salt"
+  config.vm.synced_folder ".", "/srv/salt"
   config.vm.synced_folder "/tmp", "/tmp/host_machine"
 
   # setup the salt-minion
