--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -10,18 +10,23 @@ new-window -a -c /srv/ogre
 send-keys -t ogre "workon ogreserver\n"
 send-keys -t ogre "py.test\n"
 
-# 3) code editing
+# 3) ogreserver edit
 new-window -a -n edit -c /srv/ogre/ogreserver
 send-keys -t ogre "ls -l\n"
 send-keys -t ogre "git status\n"
 
-# 4) tail gunicorn.log
-new-window -a -c /srv/ogre
-send-keys -t ogre "tail -f /var/log/ogreserver/gunicorn.log\n"
+# 4) ogreclient
+new-window -a -c /srv/ogre/ogreclient
+send-keys -t ogre "workon ogreclient\n"
 
-# 5) tail celeryd logs
+# 5) ogreclient edit
+new-window -a -c /srv/ogre/ogreclient
+send-keys -t ogre "ls -l\n"
+send-keys -t ogre "git status\n"
+
+# 6) tail gunicorn/celeryd logs
 new-window -a -c /srv/ogre
-send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log\n"
+send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log /var/log/ogreserver/gunicorn.log\n"
 
 # display the py.test output
 select-window -t :2
