provision: full rewrite of provision & deployment

--- a/ogreserver/config/provision/staging/packer-salt-minion.conf
+++ b/ogreserver/config/provision/staging/packer-salt-minion.conf
@@ -11,10 +11,16 @@ grains:
   env: prod
   role: ogreserver
 
+fileserver_backend:
+  - roots
+  - git
+
+gitfs_remotes:
+  - https://github.com/mafrosis/salt-formulae
+
 file_roots:
   base:
     - /srv/salt
-    - /srv/salt/salt-formulae
 
 pillar_roots:
   base:
