salt-formulae: switched to gitfs remote

--- a/ogreserver/config/salt-minion.conf
+++ b/ogreserver/config/salt-minion.conf
@@ -7,10 +7,17 @@ grains:
   role: ogreserver
 #  role: ogreclient
 
+fileserver_backend:
+  - roots
+  - git
+
+gitfs_remotes:
+  - git://github.com/mafrosis/salt-formulae:
+    - base: v0.2.0
+
 file_roots:
   base:
     - /vagrant/salt
-    - /srv/salt/salt-formulae
 
 pillar_roots:
   base:
