salt: specify path to celerybeat schedule refs mafrosis/salt-formulae@591ff50

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -55,7 +55,7 @@ redirect_stderr=true
 
 [program:celerybeat]
 directory=/srv/ogre
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery beat --app=ogreserver.runcelery:celery
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery beat --app=ogreserver.runcelery:celery --schedule=/var/celerybeat/schedule
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
