salt: dev-build: mount code directory at /srv/ogre with vagrant

--- a/ogreserver/config/salt-minion.conf
+++ b/ogreserver/config/salt-minion.conf
@@ -9,12 +9,12 @@ grains:
 
 file_roots:
   base:
-    - /srv/salt/salt
+    - /vagrant/salt
     - /srv/salt/salt-formulae
 
 pillar_roots:
   base:
-    - /srv/salt/pillar
+    - /vagrant/pillar
 
 mysql.user: root
 mysql.pass: eggs
