--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ogreserver/static/bower_components/foundation"]
 	path = ogreserver/static/bower_components/foundation
 	url = https://github.com/zurb/bower-foundation.git
+[submodule "ogreserver/static/sass/compass"]
+	path = ogreserver/static/sass/compass
+	url = https://github.com/oii/compass.git
