server: use libsass directly instead of compass

--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -2,7 +2,7 @@
 new-session -s ogre -c /srv/ogre
 
 # 1) tail gunicorn/celeryd logs
-send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log /var/log/ogreserver/gunicorn.log | grep -v workers\n"
+send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log /var/log/ogreserver/gunicorn.log /var/log/ogreserver/watchdog.libsass.log | grep -v workers\n"
 
 # 2) enter venv in default window
 new-window -a -c /srv/ogre
