server: tmux tail command filters useless gunicorn 'DEBUG 1 workers' messages

--- a/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
+++ b/ogreserver/config/salt/dev-build/tmux-ogre-init.conf
@@ -16,7 +16,7 @@ send-keys -t ogre "workon ogreclient\n"
 
 # 4) tail gunicorn/celeryd logs
 new-window -a -c /srv/ogre
-send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log /var/log/ogreserver/gunicorn.log\n"
+send-keys -t ogre "tail -f /var/log/ogreserver/celery*.log /var/log/ogreserver/gunicorn.log | grep -v workers\n"
 
 # display the py.test output
 select-window -t :2
