--- a/ogreserver/config/requirements.txt
+++ b/ogreserver/config/requirements.txt
@@ -14,7 +14,7 @@ passlib==1.6.2
 MySQL-python==1.2.5
 whoosh==2.7.0
 sesame==0.3.3
-rethinkdb==1.15.0-1
+rethinkdb==2.1.0.post2
 Unidecode==0.04.18
 ftfy==4.0.0
 requests==2.7.0
