server: more celery queues for better control of task execution

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -25,9 +25,10 @@ redirect_stderr=true
 {% set purge = "" %}
 {% endif %}
 
-[program:celeryd.general]
+{% for worker_name, concurrency in workers.iteritems() %}
+[program:celeryd.{{ worker_name }}]
 directory=/srv/ogre
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n ogreserver.worker -Q ogreserver -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-1.pid --workdir=/srv/ogre
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n {{ worker_name }}.worker -Q {{ worker_name }} -l {{ loglevel }} {{ purge }} {% if concurrency > 0 %}-c {{ concurrency }}{% endif %} --pidfile /tmp/celeryd-worker-{{ worker_name }}.pid --workdir=/srv/ogre
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -35,23 +36,10 @@ autorestart=true
 {% if grains['env'] == 'prod' %}
 stdout_logfile=syslog
 {% else %}
-stdout_logfile=/var/log/ogreserver/celeryd-general.log
+stdout_logfile=/var/log/ogreserver/celeryd-{{ worker_name }}.log
 {% endif %}
 redirect_stderr=true
-
-[program:celeryd.conversion]
-directory=/srv/ogre
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n conversion.worker -Q conversion --concurrency 1 -l {{ loglevel }} {{ purge }} --pidfile /tmp/celeryd-ogreserver-2.pid --workdir=/srv/ogre
-environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin:/usr/local/bin:/usr/local/sbin:/usr/local/share/python:/usr/local/bin:/usr/bin:/bin"
-user={{ app_user }}
-autostart=true
-autorestart=true
-{% if grains['env'] == 'prod' %}
-stdout_logfile=syslog
-{% else %}
-stdout_logfile=/var/log/ogreserver/celeryd-conversion.log
-{% endif %}
-redirect_stderr=true
+{% endfor %}
 
 [program:celerybeat]
 directory=/srv/ogre
@@ -70,4 +58,4 @@ priority=998
 
 
 [group:ogreserver]
-programs=gunicorn,celeryd.general,celeryd.conversion,celerybeat
+programs=gunicorn,{% for worker_name in workers %}celeryd.{{ worker_name }},{% endfor %}celerybeat
