--- a/ogreserver/config/Vagrantfile
+++ b/ogreserver/config/Vagrantfile
@@ -4,6 +4,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "mafrosis/jessie64-gb-salt"
   config.vm.provider :vmware_fusion do |v|
     v.vmx['memsize'] = 1024
+    v.vmx['numvcpus'] = 2
   end
 
   # create a shared dir in /tmp
