dev: better gunicorn/celeryd watch commands

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -28,7 +28,7 @@ redirect_stderr=true
 {% for worker_name, concurrency in workers.iteritems() %}
 [program:celeryd.{{ worker_name }}]
 directory=/srv/ogre
-command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n {{ worker_name }}.worker -Q {{ worker_name }} -l {{ loglevel }} {{ purge }} {% if concurrency > 0 %}-c {{ concurrency }}{% endif %} --pidfile /tmp/celeryd-worker-{{ worker_name }}.pid --workdir=/srv/ogre
+command=/home/{{ app_user }}/.virtualenvs/ogreserver/bin/celery worker --app=ogreserver.runcelery:celery -n {{ worker_name }}.worker -Q {{ worker_name }} -l {{ loglevel }} {{ purge }} {% if concurrency > 0 %}-c {{ concurrency }}{% endif %} --pidfile /tmp/ogreserver-celeryd-worker-{{ worker_name }}.pid --workdir=/srv/ogre
 environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
@@ -36,7 +36,7 @@ autorestart=true
 {% if grains['env'] == 'prod' %}
 stdout_logfile=syslog
 {% else %}
-stdout_logfile=/var/log/ogreserver/celeryd-{{ worker_name }}.log
+stdout_logfile=/var/log/ogreserver/celeryd-worker-{{ worker_name }}.log
 {% endif %}
 redirect_stderr=true
 {% endfor %}
