--- a/ogreserver/config/requirements.txt
+++ b/ogreserver/config/requirements.txt
@@ -1,4 +1,5 @@
 -e git://github.com/oii/flask-markdown.git@9059a634fa642022819d0c5ef6915879bafb95a5#egg=Flask_Markdown-master
+babel==2.1.1
 boto==2.38.0
 bottlenose==0.6.2
 celery==3.1.19
@@ -14,6 +15,7 @@ MySQL-python==1.2.5
 ordereddict==1.1
 passlib==1.6.5
 pyaml==15.8.2
+python-dateutil==2.4.2
 python-Levenshtein==0.12.0
 requests==2.8.1
 rethinkdb==2.1.0.post2
