salt: support staging env in salt states

--- a/ogreserver/config/salt/ogreserver/supervisord.conf
+++ b/ogreserver/config/salt/ogreserver/supervisord.conf
@@ -12,10 +12,10 @@ environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
 autorestart=true
-{% if grains['env'] == 'prod' %}
-stdout_logfile=syslog
-{% else %}
+{% if grains['env'] == 'dev' %}
 stdout_logfile=/var/log/ogreserver/gunicorn.log
+{% else %}
+stdout_logfile=syslog
 {% endif %}
 redirect_stderr=true
 
@@ -33,10 +33,10 @@ environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
 autorestart=true
-{% if grains['env'] == 'prod' %}
-stdout_logfile=syslog
-{% else %}
+{% if grains['env'] == 'dev' %}
 stdout_logfile=/var/log/ogreserver/celeryd-worker-{{ worker_name }}.log
+{% else %}
+stdout_logfile=syslog
 {% endif %}
 redirect_stderr=true
 {% endfor %}
@@ -48,10 +48,10 @@ environment=PATH="/home/{{ app_user }}/.virtualenvs/ogreserver/bin"
 user={{ app_user }}
 autostart=true
 autorestart=true
-{% if grains['env'] == 'prod' %}
-stdout_logfile=syslog
-{% else %}
+{% if grains['env'] == 'dev' %}
 stdout_logfile=/var/log/ogreserver/celerybeat.log
+{% else %}
+stdout_logfile=syslog
 {% endif %}
 redirect_stderr=true
 priority=998
