--- a/ogreserver/config/requirements.txt
+++ b/ogreserver/config/requirements.txt
@@ -1,25 +1,24 @@
 -e git://github.com/oii/flask-markdown.git@9059a634fa642022819d0c5ef6915879bafb95a5#egg=Flask_Markdown-master
-babel==2.1.1
-boto==2.38.0
-bottlenose==0.6.2
-celery==3.1.19
+Babel==2.2.0
+boto==2.39.0
+bottlenose==0.6.3
+celery==3.1.20
 Flask==0.10.1
 Flask-Script==0.6.7
-Flask-Security==1.7.4
-Flask-Uploads==0.1.3
+Flask-Security==1.7.5
+Flask-Uploads==0.2.0
 Flask-WTF==0.12
 ftfy==4.0.0
-fuzzywuzzy==0.7.0
-gunicorn==19.3.0
+fuzzywuzzy==0.8.1
+gunicorn==19.4.5
 MySQL-python==1.2.5
 ordereddict==1.1
 passlib==1.6.5
 pyaml==15.8.2
 python-dateutil==2.4.2
 python-Levenshtein==0.12.0
-requests==2.8.1
-rethinkdb==2.1.0.post2
-sesame==0.3.3
-SQLAlchemy==1.0.9
-Unidecode==0.04.18
+requests==2.9.1
+rethinkdb==2.2.0.post3
+SQLAlchemy==1.0.11
+Unidecode==0.04.19
 whoosh==2.7.0
